[package]
name = "ticked"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curl = { version = "0.4.44", features = [] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "1.14.0"

tempfile = "3"

pulldown-cmark = { version = "0.9.2", default-features = false }
