[package]
name = "ticked"
version = "0.1.1"
authors = ["UnkwUsr <ktoto2707043@gmail.com>"]
description = """
cli tool for managing ticktick.com tasks
"""
repository = "https://github.com/UnkwUsr/ticked"
keywords = ["ticktick"]
categories = ["command-line-utilities"]
license = "MIT"
edition = "2021"


[dependencies]
curl = { version = "0.4.44", features = [] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "1.14.0"

tempfile = "3"

pulldown-cmark = { version = "0.9.2", default-features = false }
